bug fixed related to responsiveness and overflow

--- a/style.css
+++ b/style.css
@@ -5324,6 +5324,9 @@
   .h-12 {
     height: calc(var(--spacing) * 12);
   }
+  .h-\[10vh\] {
+    height: 10vh;
+  }
   .h-\[30px\] {
     height: 30px;
   }
@@ -5333,23 +5336,59 @@
   .h-\[50px\] {
     height: 50px;
   }
+  .h-\[70\%\] {
+    height: 70%;
+  }
+  .h-\[90vh\] {
+    height: 90vh;
+  }
   .h-\[100vh\] {
     height: 100vh;
+  }
+  .h-\[200px\] {
+    height: 200px;
+  }
+  .h-\[300px\] {
+    height: 300px;
   }
   .h-\[400px\] {
     height: 400px;
   }
+  .h-\[600px\] {
+    height: 600px;
+  }
+  .h-\[700px\] {
+    height: 700px;
+  }
+  .h-\[900px\] {
+    height: 900px;
+  }
+  .h-\[vh\] {
+    height: vh;
+  }
   .h-auto {
     height: auto;
   }
+  .h-fit {
+    height: fit-content;
+  }
   .h-screen {
     height: 100vh;
+  }
+  .max-h-\[80vh\] {
+    max-height: 80vh;
+  }
+  .max-h-\[90vh\] {
+    max-height: 90vh;
   }
   .max-h-none {
     max-height: none;
   }
   .max-h-screen {
     max-height: 100vh;
+  }
+  .min-h-\[90vh\] {
+    min-height: 90vh;
   }
   .min-h-screen {
     min-height: 100vh;
@@ -5452,6 +5491,9 @@
   }
   .loading-xs {
     width: calc(var(--size-selector, 0.25rem) * 4);
+  }
+  .w-1 {
+    width: calc(var(--spacing) * 1);
   }
   .w-1\/2 {
     width: calc(1/2 * 100%);
@@ -6168,6 +6210,12 @@
   }
   .overflow-scroll {
     overflow: scroll;
+  }
+  .overflow-x-hidden {
+    overflow-x: hidden;
+  }
+  .overflow-y-scroll {
+    overflow-y: scroll;
   }
   .scroll-auto {
     scroll-behavior: auto;
@@ -8837,6 +8885,11 @@
       margin-top: calc(var(--spacing) * 4);
     }
   }
+  .md\:h-auto {
+    @media (width >= 768px) {
+      height: auto;
+    }
+  }
   .md\:w-\[600px\] {
     @media (width >= 768px) {
       width: 600px;
@@ -8920,6 +8973,11 @@
   .lg\:hidden {
     @media (width >= 1200px) {
       display: none;
+    }
+  }
+  .lg\:h-auto {
+    @media (width >= 1200px) {
+      height: auto;
     }
   }
   .lg\:w-80 {
